force-app/main/default/objects/Program__c/fields/Billing__c.field-meta.xml
<CustomField>
    <fullName>Billing__c</fullName>
    <label>Billing</label>
    <length>200</length>
    <type>Text</type>
</CustomField>