force-app/main/default/objects/Program__c/fields/Capital__c.field-meta.xml
<CustomField>
    <fullName>Capital__c</fullName>
    <label>Capital</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>