force-app/main/default/objects/Program__c/fields/Executive_Sponser__c.field-meta.xml
<CustomField>
    <fullName>Executive_Sponser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Executive Sponser</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Programs</relationshipName>
    <type>Lookup</type>
</CustomField>