force-app/main/default/objects/Program__c/fields/Linked_Program__c.field-meta.xml
<CustomField>
    <fullName>Linked_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked Program</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Programs1</relationshipName>
    <type>Lookup</type>
</CustomField>