force-app/main/default/objects/Program__c/fields/Material_Cost_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Material_Cost_Allocation__c</fullName>
    <label>Material Cost Allocation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>