force-app/main/default/objects/Program__c/fields/Operational__c.field-meta.xml
<CustomField>
    <fullName>Operational__c</fullName>
    <label>Operational</label>
    <length>200</length>
    <type>Text</type>
</CustomField>