force-app/main/default/objects/Program__c/fields/Planned_Spend__c.field-meta.xml
<CustomField>
    <fullName>Planned_Spend__c</fullName>
    <label>Planned Spend</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>