force-app/main/default/objects/Program__c/fields/Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Portfolio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portfolio</label>
    <referenceTo>Portfolio__c</referenceTo>
    <relationshipLabel>Programs</relationshipLabel>
    <relationshipName>Programs</relationshipName>
    <type>Lookup</type>
</CustomField>