force-app/main/default/objects/Program__c/fields/Return_on_Investment__c.field-meta.xml
<CustomField>
    <fullName>Return_on_Investment__c</fullName>
    <label>Return on Investment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>