force-app/main/default/objects/Program__c/fields/S__c.field-meta.xml
<CustomField>
    <fullName>S__c</fullName>
    <description>Please Select the Status of the Program</description>
    <inlineHelpText>Select one status from the drop-down list</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>